# mnist_deep_ann

./: .gitignore  LICENSE  Makefile  README.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/ann/: CMakeLists.txt  ann_diagnostics.h  ann_interface.cpp  ann_interface.h  convolution_hierarchy.cpp  convolution_hierarchy.h  simple_activation.cpp  simple_activation.h
src/lib/command_line_options/: CMakeLists.txt  clo.hpp
src/lib/mnist_data/: CMakeLists.txt  mnist_data.cpp  mnist_data.h
src/scripts/: set_path_template.bat
src/test/: CMakeLists.txt
src/test/ann_test/: CMakeLists.txt  ann_test_main.cpp
